# SonySDK1v11_Examples

./: .gitignore  CMakeLists.txt  CMakeLists_original.txt  Commits.md  README.md
app/include/: CameraDevice.h  test_sdk.h
app/src/: CameraDevice.cpp  RemoteCli.cpp  optimized_version.cpp  readme.md  recovery_6_jun.cpp  sony_app.cpp  sony_app_lib.cpp  test_sdk.cpp  test_sdk2.cpp  test_sdk2_jun12.cpp
app/src/backups/: old_code.cpp  optimized_version.cpp  recovery_6_jun.cpp  test_sdk2_jun12.cpp
docs/: directory_structure_issue.md  readme.md
